--- a/templates/entry_small_thumbnail.html
+++ b/templates/entry_small_thumbnail.html
@@ -9,7 +9,7 @@
 			<div class="small_thumbnail-entry-title">
 				{title}
 			</div>
-			<div class="small_thumbnail-entry-desc">
+			<div class="small_thumbnail-entry-desc post-desc">
 				{description}
 			</div>
 		</div>
