--- a/templates/page_category.html
+++ b/templates/page_category.html
@@ -1,24 +1,31 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-	<head>
-		<meta name="robots" content="noindex">
-		<meta charset="utf-8">
-		<title>{title}</title>
-		<link rel="stylesheet" href="/css/main.css">
-	</head>
-	<body>
-		<div class="breadcrumbs_div">
-			{breadcrumbs}
-		</div>
-		<article>
-			<h1 id="section">{section}</h1>
-			<p class="home-info">
-			</p>
-			{entry}
-		</article>
 
-		<p class="buildwith">
-			Built with <a href="/projects/site_builder.html" class="visible_link">Static&nbspSite&nbspGenerator</a>, a tool I wrote in Python.
+<head>
+	<meta name="robots" content="noindex">
+	<meta charset="utf-8">
+	<title>{title}</title>
+	<link rel="stylesheet" href="/css/main.css">
+</head>
+
+<body>
+	<div class="breadcrumbs_div">
+		{breadcrumbs}
+	</div>
+	<article>
+		<h1 id="section">{section}</h1>
+		<p class="home-info">
 		</p>
-	</body>
+		{entry}
+	</article>
+
+	<div class="buildwith-container">
+		<div class="buildwith">
+			<p class="buildwith">
+				Built with <a href="/projects/site_builder.html" class="visible_link">Static&nbspSite&nbspGenerator</a>, a tool I wrote in Python.
+			</p>
+		</div>
+	</div>
+</body>
+
 </html>
