--- a/templates/entry_basic.html
+++ b/templates/entry_basic.html
@@ -9,7 +9,7 @@
 			{date}
 		</div>
 	</div>
-	<div class="basic-post-entry-desc">
+	<div class="basic-post-entry-desc post-desc">
 		{description}
 	</div>
 </div>
