--- a/templates/entry_minimal.html
+++ b/templates/entry_minimal.html
@@ -4,7 +4,7 @@
 	<div class="minimal-post-entry-title">
 		{title}
 	</div>
-	<div class="minimal-post-entry-desc">
+	<div class="minimal-post-entry-desc post-desc">
 		{description}
 	</div>
 </div>
