--- a/templates/page_contact.html
+++ b/templates/page_contact.html
@@ -4,7 +4,7 @@
 <head>
 	<meta name="robots" content="noindex">
 	<meta charset="utf-8">
-	<title>{title}</title>
+	<title>{title} | Narek</title>
 	<link rel="stylesheet" href="/css/main.css">
 	<link rel="stylesheet" href="/css/test.css">
 </head>
