--- a/templates/page_home.html
+++ b/templates/page_home.html
@@ -4,7 +4,7 @@
 <head>
 	<meta name="robots" content="noindex">
 	<meta charset="utf-8">
-	<title>NarekB</title>
+	<title>Narek</title>
 	<link rel="alternate" type="application/rss+xml" href="/rss" title="Your title">
 	<link rel="stylesheet" href="/css/main.css">
 </head>
