--- a/css/main.css
+++ b/css/main.css
@@ -8,19 +8,19 @@ Red accent color: #CA0C13
 /* Variables */
 :root {
     --max-body-width: 1000px;
-	--min-html-width: 300px;
+    --min-html-width: 300px;
     --article-margin: 2rem;
-	--built-with-height: 4rem;
+    --built-with-height: 4rem;
     /* --article-margin: 0; */
     --text-spacing: 1rem;
     --section-spacing: 3rem;
     --post-spacing: 1rem;
     --text-indent: 1rem;
-    --h1-size: 2.5rem;
-    --h2-size: 2rem;
+    --h1-size: 2.8rem;
+    --h2-size: 2.2rem;
     --h3-size: 1.8rem;
     --h4-size: 1.5rem;
-    --p-size: 1.1rem;
+    --p-size: 1.4rem;
     --h1-weight: 400;
     --h2-weight: 200;
     --h3-weight: 200;
@@ -35,14 +35,17 @@ Red accent color: #CA0C13
 
 :root {
     --text-color: white;
-	--text-color-faded: #bbb;
+    --text-color-faded: #bbb;
     --bg-color: black;
     --bg-color-post: #111;
+    --bg-color-post: black;
     --bg-color-post-hover: #222;
+    /* --bg-color-post-hover: #111; */
     --bg-color-post-click: #444;
     --bg-color-post-disabled: grey;
     --bg-color-code: #222;
     --accent-color: #CA0C13;
+    /* --accent-color: #04d9ff; */
 }
 
 /* @media (prefers-color-scheme: light) {
@@ -55,6 +58,16 @@ Red accent color: #CA0C13
 	}
 }
  */
+p a {
+    text-decoration: underline;
+     text-underline-offset: 0.25rem;
+    color: lightblue;
+}
+
+p a::after {
+	content: '⇧';
+}
+
 * {
     -webkit-box-sizing: border-box -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -75,7 +88,7 @@ Red accent color: #CA0C13
 html {
     padding: 0 var(--article-margin) 0;
     background-color: var(--bg-color);
-    font-size: 12px;
+    font-size: 13px;
     color: var(--text-color);
     min-height: 100%;
     min-width: var(--min-html-width);
@@ -94,17 +107,25 @@ body {
     margin: 0 auto 0;
     max-width: var(--max-body-width);
     padding-top: 2rem;
-	min-height: 100%;
+    min-height: 100%;
 }
 
 article {
     min-height: 60vh;
 }
 
+div.date_subtitle {
+    margin: 2rem 1rem;
+    font-size: var(--h4-size);
+    color: var(--text-color-faded);
+    text-align: center;
+}
+
 h1 {
     font-weight: var(--h1-weight);
-    margin: var(--text-spacing) 0px;
+    margin: 3rem 0px 2rem;
     font-size: var(--h1-size);
+    text-align: center;
 }
 
 h2 {
@@ -227,7 +248,7 @@ ul.breadcrumb>li:last-child a {
 }
 
 .post-desc {
-	color: var(--text-color-faded);
+    color: var(--text-color-faded);
 }
 
 .post-entry:hover {
@@ -353,19 +374,20 @@ div.buildwith {
     text-align: center;
     /* margin-top: 10rem; */
     /* margin-bottom: 5rem; */
-	position: absolute;
-	width: calc(100%);
-	min-width: var(--min-html-width);
-	padding: 4rem 0 4rem;
-	margin: 0;
-	/* bottom: var(--built-with-height); */
-	background-color: transparent;
-	display: block;
+    position: absolute;
+    width: calc(100%);
+    min-width: var(--min-html-width);
+    padding: 4rem 0 4rem;
+    margin: 0;
+    /* bottom: var(--built-with-height); */
+    background-color: transparent;
+    display: block;
 }
-.buildwith-container{
-	position: relative;
-	width: 100%;
-	display: inline-block;
+
+.buildwith-container {
+    position: relative;
+    width: 100%;
+    display: inline-block;
 }
 
 pre {
@@ -380,6 +402,7 @@ pre {
 code {
     /* font-size: 0.75rem!important; */
     overflow-x: scroll;
+    font-family: monospace;
 }
 
 pre::-webkit-scrollbar {
@@ -405,4 +428,52 @@ embed[type="application/pdf"] {
     width: 80%;
     margin-left: 10%;
     height: 600px;
+}
+
+.toc-container {
+    /* background-color: blue; */
+    /* width: 100%; */
+    /* float: left; */
+    /* margin: auto; */
+    margin: 1rem var(--text-indent) 3rem;
+    /* width: 100%; */
+    text-align: center;
+}
+
+div.toc>h4 {
+    margin: 0;
+}
+
+div.toc {
+    background-color: var(--bg-color-post-hover);
+    /* padding: 1.5rem 1.5rem 1.5rem 3rem ; */
+    padding: 2rem 3rem 1rem 2rem;
+    border-radius: 1.5rem;
+    width: auto;
+    margin: auto;
+    display: inline-block;
+    text-align: left;
+    /* max-width: 100%; */
+}
+
+ol.toc {
+    padding-left: 1rem;
+}
+
+.toc-element {
+    font-size: 1.2rem;
+}
+
+.toc li {
+    list-style-type: none;
+    padding-left: 0.5rem;
+}
+
+.toc ul {}
+
+prefix {
+    color: var(--text-color-faded);
+    padding-right: 1rem;
+    font-size: var(--p-size);
+    font-size: 1rem;
 }
