--- a/templates/page_article.html
+++ b/templates/page_article.html
@@ -19,7 +19,7 @@
 	<div class="buildwith-container">
 		<div class="buildwith">
 			<p class="buildwith">
-				Built with <a href="/projects/site_builder.html" class="visible_link">Static&nbspSite&nbspGenerator</a>, a tool I wrote in Python.
+				Built with a <a href="/projects/site_builder.html" class="visible_link">Static&nbspSite&nbspGenerator</a> I wrote in Python.
 			</p>
 		</div>
 	</div>
