--- a/css/main.css
+++ b/css/main.css
@@ -83,6 +83,7 @@ p a::after {
     background-color: inherit;
     text-decoration: none;
     font-size: inherit;
+	word-wrap:break-word;
 }
 
 html {
