--- a/css/main.css
+++ b/css/main.css
@@ -490,3 +490,15 @@ prefix {
     font-size: 1rem;
 	font-family: monospace;
 }
+
+
+
+
+div.bib-container{
+	width: 100%;
+	/* background-color: red; */
+}
+.bib li{
+	/* background-color: blue; */
+	margin-bottom: 1rem;
+}
