--- a/css/main.css
+++ b/css/main.css
@@ -450,16 +450,17 @@ div.toc>h4 {
     margin: 0;
 	/* text-decoration: underline;
      text-underline-offset: 0.25rem; */
-
+ 	display: inline-block;
+	padding-left: 2rem;
 }
 div.toc>h4::after {
-	content:
+	/* content: */
 }
 
 div.toc {
     background-color: var(--bg-color-post-hover);
     /* padding: 1.5rem 1.5rem 1.5rem 3rem ; */
-    padding: 2rem 3rem 1rem 2rem;
+    padding: 2rem 3rem 1rem 0rem;
     border-radius: 1.5rem;
     width: auto;
     margin: auto;
@@ -469,7 +470,7 @@ div.toc {
 }
 
 ol.toc {
-    padding-left: 1rem;
+    padding-left: 0rem;
 }
 
 .toc-element {
@@ -489,6 +490,9 @@ prefix {
     font-size: var(--p-size);
     font-size: 1rem;
 	font-family: monospace;
+	text-align: right;
+	width: 4rem;
+	display: inline-block;
 }
 
 
